[package]
name = "dioxus-logger"
version = "0.4.0"
edition = "2021"
description = "A logging utility to provide a standard interface whether you're targetting web, desktop, or mobile."
repository = "https://github.com/DogeDark/dioxus-logger"
homepage = "https://github.com/DogeDark/dioxus-logger"
readme = "README.md"
license = "MIT"
keywords = ["dioxus", "log", "logging"]
categories = ["development-tools::debugging"]

[features]
timestamps = ["dep:time"]

[dependencies]
log = { version = "0.4", features = ["std"] }
time = { version = "0.3.17", features = ["std", "wasm-bindgen"], optional = true }
#reqwest = { version = "0.11", features = [] }
web-sys = { version = "0.3.60", features = ["console"] }
